--- a/index.html
+++ b/index.html
@@ -131,6 +131,189 @@
             <img src="./Images/product1-10.webp" alt="">
         </div>
     </div>
+    
+    <div class="box-row">
+        <div class="box-col">
+            <h3>Stationary</h3>
+            <img src="./Images/box3-1.webp" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Laptop for Study</h3>
+            <img src="./Images/box3-2.webp" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Office Chaire</h3>
+            <img src="./Images/box3-3.webp" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Gaming Monitor</h3>
+            <img src="./Images/box3-4.webp" alt="">
+            <a href="/">Shop More</a>
+        </div>
+    </div>
+
+    <div class="products-slider-with-price">
+        <h2>Deals Under $25</h2>
+        <div class="products">
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-1.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-2.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-3.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-4.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-5.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-6.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-7.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-8.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-9.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-10.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+            <div class="product-card">
+                <div class="product-img-container">
+                    <img src="./Images/product2-11.webp" alt="">
+                </div>
+                <div class="product-offer">
+                    <p>27% off</p> <span>Deal</span>
+                </div>
+                <p class="product-price">$ <span>14.49</span> List Price:$19.95</p>
+                <h4>This product is the best for you</h4>
+            </div>
+        </div>
+    </div>
+
+    <div class="products-slider">
+        <h2>Best Sellers in Sports & Outdoors</h2>
+        <div class="products">
+            <img src="./Images/product1-1.webp" alt="">
+            <img src="./Images/product1-2.webp" alt="">
+            <img src="./Images/product1-3.webp" alt="">
+            <img src="./Images/product1-4.webp" alt="">
+            <img src="./Images/product1-5.webp" alt="">
+            <img src="./Images/product1-6.webp" alt="">
+            <img src="./Images/product1-7.webp" alt="">
+            <img src="./Images/product1-8.webp" alt="">
+            <img src="./Images/product1-9.webp" alt="">
+            <img src="./Images/product1-10.webp" alt="">
+        </div>
+    </div>
+
+    <div class="box-row">
+        <div class="box-col">
+            <h3>Stationary</h3>
+            <img src="./Images/box3-1.webp" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Laptop for Study</h3>
+            <img src="./Images/box3-2.webp" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Office Chaire</h3>
+            <img src="./Images/box3-3.webp" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Gaming Monitor</h3>
+            <img src="./Images/box3-4.webp" alt="">
+            <a href="/">Shop More</a>
+        </div>
+    </div>
+
+    <footer>
+        <img src="./Images/amazon_logo.webp" width="100" alt="">
+        <p>&copy; 1996-2024, Amazon.com, Inc. or its affiliates</p>
+    </footer>
     <script src="app.js"></script>
 </body>
 
